css/wsgeorge.css
@font-face {
	font-family: miama;
	src: url('../fonts/Miama.otf');
	font-weight: 500;
}

@font-face {
	font-family: ebgaramond;
	src: url('../fonts/EBGaramond-Regular.ttf');
}

@font-face{
	font-family: satisfy;
	src: url('../fonts/Satisfy-Regular.ttf');
}

::-webkit-scrollbar { 
    display: none; 
}

body{
	/*padding-top: 70px;*/
	padding-bottom: 30px;
	background: url('../img/grassland_dark.jpg') no-repeat center center fixed;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
}

.navbar-default{
	background: transparent;
	border-style: none;

	padding-top: 15px;

	font-family: satisfy, cursive;
	font-size: 18px;
	color: #FFFFFF;
}

.navbar-default .navbar-nav li a{
	color: #FFFFFF;
	text-shadow: 1px 1px 1px #000000;
}

.navbar-default .navbar-nav li a:hover{
	color: #FFFFFF;
}

.navbar-default .navbar-nav .open>a:focus{
	color: #333333;
	background: transparent;
}
.navbar-default .navbar-nav li a:focus{
	color: #333333;
	background: transparent;
}

.navbar-default .navbar-brand{
	font-family: satisfy, cursive;
	font-size: 20px;
	color: #FFFFFF;
}

.navbar-fixed-bottom{
	padding-top: 0px;
	padding-right: 40px;
}

/*HOME PAGE RULES*/

.banner-text{
	margin-top: 170px;
	margin-bottom: 80px;
	padding: 25px;
	/*line-height: 1.3;*/

	font-family: miama, cursive;
	font-size: 12vh;
	color: #FFFFFF;

	/*text-shadow: 1px 1px 1px #555555;*/
}

.psa-text{
	font-family: miama, cursive;
	font-size: 5vh;
	color: #FFFFFF;
	font-weight: 100;

	/*text-shadow: 1px 1px 1px #555555;*/
}

/*LAYOUT RULES*/

.content-container{
	padding-left: 40px;
	padding-right: 40px;
}

.content-title{
	font-family: satisfy, cursive;
	margin-bottom: 30px;
	color: #FFFFFF;
	/*text-shadow: 1px 1px 1px #555555;*/
}

.content-text{
	font-family: ebgaramond, serif;
	font-size: 22px;
	color: #FFFFFF;
	margin-bottom: 25px;
	/*text-shadow: 1px 1px 1px #555555;*/
}

.signature{
		font-family: satisfy, cursive;
	margin-bottom: 30px;
	color: #FFFFFF;
	/*text-shadow: 1px 1px 1px #555555;*/
}

.sidebar{
	margin-top: 50px;
	border-top-style: double;
	border-top-width: 1px;
	border-color: #FFFFFF;
}

.sidebar-content-title{
	font-family: satisfy, cursive;
	margin-bottom: 5px;
	font-size: 25px;
	color: #FFFFFF;
	/*text-shadow: 1px 1px 1px #555555;*/
}

.sidebar-content-text, .sidebar-content-text a{
	font-family: ebgaramond, serif;
	font-size: 15px;
	color: #FFFFFF;
	/*text-shadow: 1px 1px 1px #555555;*/
}

